# 2026-1-P-cell-classification

./: .gitignore  README.md  pyproject.toml
notebooks/: data.ipynb
outputs/20260711_185941/: report.txt
outputs/20260711_191254/: report.txt
outputs/20260711_193513/: report.txt
outputs/20260711_204411/: report.txt
outputs/20260711_211622/: report.txt
outputs/20260711_213206/: report.txt
outputs/20260711_214618/: report.txt
outputs/20260711_220627/: report.txt
outputs/20260711_224523/: report.txt
outputs/20260711_234634/3_classes/: report.txt
outputs/20260711_234634/6_classes/: report.txt
outputs/20260712_005136/2_classes/: cross_validation.txt  metrics_table.txt  test_report.txt
outputs/20260712_005136/2_classes/fold_1/: report.txt
outputs/20260712_005136/2_classes/fold_2/: report.txt
outputs/20260712_005136/2_classes/fold_3/: report.txt
outputs/20260712_005136/2_classes/fold_4/: report.txt
outputs/20260712_005136/2_classes/fold_5/: report.txt
outputs/20260712_005136/3_classes/: cross_validation.txt  metrics_table.txt  test_report.txt
outputs/20260712_005136/3_classes/fold_1/: report.txt
outputs/20260712_005136/3_classes/fold_2/: report.txt
outputs/20260712_005136/3_classes/fold_3/: report.txt
outputs/20260712_005136/6_classes/: cross_validation.txt  metrics_table.txt  test_report.txt
src/config/: hyperparameters.py  logging.py
src/data/: process_data.py
src/scripts/: recompute_metrics.py  train_and_eval.py
src/torch/modules/: dataset.py  model.py
src/torch/utils/: cross_validate.py  evaluate.py  train_strategy.py
(+7 files in other folders)
