[project]
name = "2026-1-p-cell-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "tqdm>=4.68.4",
]
